argo/dev/bootstrap/argo-cd/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd-test.audacioustux.com`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd-test.audacioustux.com`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
<<<<<<< 0951586c4f8fa93e2a7603d885aadf8b2f3e71cf
    certResolver: default
=======
    certResolver: argocd-server
>>>>>>> add cert-manager
